# useful-automation-lab

./: LICENSE  README.md  pyproject.toml
examples/: create_sqlite_demo.py  create_zip_demo.py  duplicates.json  events.csv  events.jsonl  manifest-policy.json  snapshot-after.json  snapshot-before.json  text-audit-clean.txt
src/useful_automation_lab/: __init__.py  compare.py  csv_audit.py  duplicates.py  inventory.py  jsonl_audit.py  policy.py  sqlite_audit.py  text_audit.py  verify.py  zip_audit.py
tests/: test_compare.py  test_csv_audit.py  test_duplicates.py  test_inventory.py  test_jsonl_audit.py  test_policy.py  test_sqlite_audit.py  test_text_audit.py  test_verify.py  test_zip_audit.py
