[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "useful-automation-lab"
version = "0.3.0"
description = "Safe, inspectable utilities for repetitive local tasks"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
file-inventory = "useful_automation_lab.inventory:main"
manifest-diff = "useful_automation_lab.compare:main"
manifest-verify = "useful_automation_lab.verify:main"

[tool.setuptools.packages.find]
where = ["src"]
